...
    UILabel *offLabel = [[UILabel alloc] init];
    UILabel *onLabel = [[UILabel alloc] init];
    offLabel.backgroundColor = [UIColor clearColor];
    onLabel.backgroundColor = [UIColor clearColor];
    offLabel.textAlignment = NSTextAlignmentCenter;
    onLabel.textAlignment = NSTextAlignmentCenter;
    offLabel.text = @"OFF";
    onLabel.text = @"ON";
    self.offLabel = offLabel;
    self.onLabel = onLabel;
    [internalContainer addSubview:offLabel];
    [internalContainer addSubview:onLabel];
    UIView *thumbView = [[UIView alloc] init];
    [internalContainer addSubview:thumbView];
...
